[package]
name = "has-space-rs"
version = "0.1.0"
authors = ["Constantine Theocharis <cthe@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
